force-app/main/default/objects/sObjectTriggerSetting__mdt/fields/Available_Objects__c.field-meta.xml
<CustomField>
    <fullName>Available_Objects__c</fullName>
    <label>Available Objects</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>sObject_Trigger_Settings</relationshipLabel>
    <relationshipName>sObject_Trigger_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>