force-app/main/default/objects/sObjectTriggerSetting__mdt/fields/Bypass__c.field-meta.xml
<CustomField>
    <fullName>Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable/Disable Bypass for the activities like migration</inlineHelpText>
    <label>Bypass</label>
    <type>Checkbox</type>
</CustomField>