force-app/main/default/objects/sObjectTriggerSetting__mdt/fields/BypassUsers__c.field-meta.xml
<CustomField>
    <fullName>BypassUsers__c</fullName>
    <inlineHelpText>Provide the Usernames comma separated for whom the trigger should not execute!</inlineHelpText>
    <label>Bypass Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>