force-app/main/default/objects/sObjectTriggerSetting__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/disable trigger for this object</description>
    <inlineHelpText>Enable/disable trigger for this object</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>