force-app/main/default/objects/sObjectTriggerSetting__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>SObject API name (e.g., &apos;Account&apos;, &apos;Contact&apos;, &apos;Payment__c&apos;)</description>
    <inlineHelpText>SObject API name (e.g., &apos;Account&apos;, &apos;Contact&apos;, &apos;Payment__c&apos;)</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>